--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -12,6 +12,7 @@
     "no-restricted-globals": "off"
   },
   "parserOptions": {
-    "ecmaVersion": 6
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   }
 }
