--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "JATE",
+  "name": "JustAnotherTextEditor",
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "webpack --watchAll"
+    "start": "webpack --watch"
   },
   "author": "2U",
   "license": "UNLICENSED",
